0023265: cppcheck warning: Mismatching allocation and deallocation

Use pairs: new - delete (new - delete [] for arrays), malloc - free